# hi-3

./: .editorconfig  .gitignore  1.cpp  CMakeLists.txt  README.md  school.cpp  test.cpp  text.cpp
